@@ -20,7 +20,7 @@
 sys.call(which = 0)
 sys.frame(which = 0)
 sys.nframe()
-sys.function(n = 0)
+sys.function(which = 0)
 sys.parent(n = 1)
 
 sys.calls()
@@ -31,46 +31,47 @@ sys.status()
 parent.frame(n = 1)
 }
 \arguments{
-  \item{which}{the frame number if non-negative, the number of generations
-    to go back if negative. (See the Details section.)}
-  \item{n}{the number of frame generations to go back.}
+  \item{which}{the frame number if non-negative, the number of frames
+    to go back if negative.}
+  \item{n}{the number of generations to go back. (See the Details section.)}
 }
 \details{
   \code{\link{.GlobalEnv}} is given number 0 in the list of frames.
   Each subsequent function evaluation increases the frame stack by 1
-  and the environment for evaluation of that function is returned by
-  \code{sys.frame} with the appropriate index.
+  and the call, function definition and the environment for evaluation
+  of that function are returned by \code{sys.call}, \code{sys.function}
+  and \code{sys.frame} with the appropriate index.
 
-  The parent of a function evaluation is the environment in which the
-  function was called. It is not necessarily numbered one less than the frame
-  number of the current evaluation, nor is it the environment within
-  which the function was defined.  \code{sys.parent} returns the number
-  of the parent frame if \code{n} is 1 (the default), the grandparent if
-  \code{n} is 2, and so on. \code{sys.frame} returns the environment
-  associated with a given frame number.
+  \code{sys.call}, \code{sys.frame} and \code{sys.function} accept
+  integer values for the argument \code{which}.  Non-negative values of
+  \code{which} are frame numbers whereas negative values are
+  counted back from the frame number of the current evaluation.
 
-  \code{sys.call} and \code{sys.frame} both accept integer values
-  for the argument \code{which}.  Non-negative values of
-  \code{which} are normal frame numbers whereas negative values are counted
-  back from the frame number of the current evaluation.
+  The parent frame of a function evaluation is the environment in which
+  the function was called.  It is not necessarily numbered one less than
+  the frame number of the current evaluation, nor is it the environment
+  within which the function was defined.  \code{sys.parent} returns the
+  number of the parent frame if \code{n} is 1 (the default), the
+  grandparent if \code{n} is 2, and so on.
 
-  \code{sys.nframe} returns the number of the current frame in that
-  list. \code{sys.function} gives the definition of the function
-  currently being evaluated in frame \code{n}.
-  
-  \code{sys.frames} gives a list of all the active frames and
-  \code{sys.parents} gives the indices of the parent frames of each
-  of the frames.
-  
+  \code{sys.nframe} returns an integer, the number of the current frame
+  as described in the first paragraph.
+
+  \code{sys.calls} and \code{sys.frames} give a pairlist of all the
+  active calls and frames, repectively, and \code{sys.parents} returns
+  an integer vector of indices of the parent frames of each of those
+  frames.
+
   Notice that even though the \code{sys.}\emph{xxx} functions (except
-  \code{sys.status}) are
-  interpreted, their contexts are not counted nor are they reported.
-  There is no access to them.
+  \code{sys.status}) are interpreted, their contexts are not counted nor
+  are they reported.  There is no access to them.
 
   \code{sys.status()} returns a list with components \code{sys.calls},
-  \code{sys.parents} and \code{sys.frames}.
+  \code{sys.parents} and \code{sys.frames}, the results of calls to
+  those three functions (which this will include the call to
+  \code{sys.status}: see the first example).
 
-  \code{sys.on.exit()} retrieves the expression stored for use by
+  \code{sys.on.exit()} returns the expression stored for use by
   \code{\link{on.exit}} in the function currently being evaluated.
   (Note that this differs from S, which returns a list of expressions
   for the current frame and its parents.)
@@ -78,18 +79,25 @@ parent.frame(n = 1)
   \code{parent.frame(n)} is a convenient shorthand for
   \code{sys.frame(sys.parent(n))} (implemented slightly more efficiently).
 }
-\note{
-The argument to \code{sys.function} would more logically be \code{which} rather than \code{n}. This may be changed in future versions. 
+\value{
+  \code{sys.call} returns a call, \code{sys.function} a function
+  definition, and \code{sys.frame}, \code{sys.parent} and
+  \code{parent.frame} return an environment.
+
+  For the other functions, see the Details section.
 }
+
 \references{
   Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988)
   \emph{The New S Language}.
   Wadsworth \& Brooks/Cole. (not \code{parent.frame}.)
 }
 \seealso{
-  \code{\link{eval}} for the usage of \code{sys.frame} and \code{parent.frame}.
+  \code{\link{eval}} for a usage of \code{sys.frame} and \code{parent.frame}.
 }
 \examples{
+## Note: the first two examples will give different results
+## if run by example().
 ff <- function(x) gg(x)
 gg <- function(y) sys.status()
 str(ff(1))
@@ -111,7 +119,7 @@ t1 <- function() {
     ## in frame 2 here
     cat("current frame is", sys.nframe(), "\n")
     str(sys.calls()) ## list with two components t1() and t2()
-    cat("parents are frame nos", sys.parents(), "\n") ## 0 1
+    cat("parents are frame numbers", sys.parents(), "\n") ## 0 1
     print(ls(envir=sys.frame(-1))) ## [1] "aa" "t2"
     invisible()
   }
